# mujoco-experiments

./: .gitignore  README.md  main.py  pyproject.toml
models/S1/meshes/: base_link.STL  chest_Link.STL  head_Link.STL  humanoid_pkg.urdf  left_foot_Link.STL  left_hip_pitch_Link.STL  left_hip_yaw_Link.STL  left_shoulder_pitch_Link.STL  left_shoulder_roll_Link.STL  left_wrist_yaw_Link.STL  neck_Link.STL  neck_yaw_Link.STL  right_foot_Link.STL  right_hip_pitch_Link.STL  right_hip_yaw_Link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  right_wrist_yaw_Link.STL  torso_Link.STL
models/S1/urdf/: chest_head.xacro  fixed_inertia.xml  humanoid_pkg-copy.urdf  humanoid_pkg.csv  humanoid_pkg.urdf  humanoid_pkg.xml  humanoid_waist_torso.xacro  left_arm.xacro  left_leg.xacro  mjmodel_old.xml  right_arm.xacro  right_leg.xacro
notebooks/: MUJOCO_LOG.TXT  dm_contorl-G1-learnig-worklog.ipynb  dm_contorl-G1-learning-worklog-2.ipynb  dm_control-leaning-worklog.ipynb  example.txt  gymasium-learning-worklog.ipynb  parameter-value-testing-G1.ipynb  paramter-value-testing-S1.ipynb  test.ipynb  visual-geometry-colusion-test-S1.ipynb
scripts/: convert_to_mjcf.py  env_setup.py  headless_setup.py  humanoid_control.py  inertial_set.py  model_loader.py  run_actuator_sign_test.py  stability_test.py  video_renderer.py
utility_tools/: actuator_sign_test.py  joint_logger.py
