[project]
name = "mujoco-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# dm_control + numpy 2.4 require Python >=3.11
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=7.1.0",
    "mujoco>=3.4.0",
    "dm-control",
    "numpy>=2.4.0",
    "numpy-stl>=3.2.0",
    "robot-format-converter>=1.0.0",
    "pillow>=12.0.0",
    "matplotlib>=3.10.8",
]
